--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
         <div class="container">
-            <a class="navbar-brand" [routerLink]="['/sala/agendamento']">Agendamento</a>
+            <a class="navbar-brand" [routerLink]="['/sala/lista']">Agendamentos</a>
             <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -9,7 +9,7 @@
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngbCollapse]="isCollapsed">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" [routerLink]="['/sala/lista']">Salas</a>
+                        <a class="nav-link text-dark" [routerLink]="['/sala/agendamento']">Agendar</a>
                     </li>
                 </ul>
 
