--- a/src/app/navegacao/footer/footer.component.html
+++ b/src/app/navegacao/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="border-top footer text-muted">
     <div class="container text-center">
-        Teste rodapé
+        Agendamento de Salas
     </div>
 </footer>
